--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,6 @@
 
 h1 {
     font-weight: 600 !important;
-    background-color: red;
     font-family: "https://fonts.google.com/specimen/Poppins";
 }
 
@@ -56,14 +55,17 @@ header div:nth-child(2) {
 } */
 
 #hero-section {
-    background-color: rebeccapurple;
+    background-color: hsl(193, 100%, 96%);
     overflow: auto;
     padding: 40px 60px 40px 60px;
+    position: relative;
 }
 
 #hero-section-textbox {
     width: 49%;
     display: inline-block;
+    position: absolute;
+    top: 30%;
     /* background-color: rgb(30, 97, 16); */
     /* float: left; */
     /* margin: auto; */
@@ -92,13 +94,12 @@ header div:nth-child(2) {
 }
 
 #card-section .odd {
-    background-color: rgb(51, 255, 0);
     overflow: auto;
+    border: 1px solid black;
 }
 
 #card-section .odd div {
     width: 49%;
-    /* background: orange; */
     display: inline-block;
     position: absolute;
     top: 30%;
@@ -110,13 +111,12 @@ header div:nth-child(2) {
 }
 
 #card-section .even {
-    background-color: rgb(247, 0, 255);
     overflow: auto;
+    border: 1px solid black;
 }
 
 #card-section .even div {
     width: 49%;
-    /* background: orange; */
     display: inline-block;
     position: absolute;
     top: 30%;
