--- a/styles/style.css
+++ b/styles/style.css
@@ -126,3 +126,32 @@ header div:nth-child(2) {
     width: 39%;
     float: left;
 }
+
+
+/* footer styling starts  */
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 100px 60px 100px 60px;
+}
+
+footer img {
+    display: block;
+    margin-bottom: 25px;
+}
+
+footer .footer-container {
+    width: 33%;
+    display: inline-block;
+    /* background-color: rgb(0, 225, 255); */
+}
+
+.quick-links {
+    width: 40%;
+    display: inline-block;
+}
+
+li {
+    list-style-type: none;
+}
