--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ header div:nth-child(2) {
 
 #hero-section-textbox button {
     padding: 15px 20px 15px 20px;
-    border-radius: 25%;
+    border-radius: 25px;
 }
 
 #hero-section-image {
