--- a/styles/style.css
+++ b/styles/style.css
@@ -188,11 +188,17 @@ header div:nth-child(2) {
 /* footer styling starts  */
 
 footer {
-    background-color: black;
+    background-color: hsl(192, 100%, 9%);
     color: white;
     padding: 200px 60px 100px 60px;
     z-index: -1;
     margin-top: 150px;
+}
+
+footer div:nth-child(2) div,
+p {
+    /* background-color: honeydew; */
+    margin-bottom: 10px;
 }
 
 footer img {
@@ -203,14 +209,20 @@ footer img {
 footer .footer-container {
     width: 33%;
     display: inline-block;
-    /* background-color: rgb(0, 225, 255); */
 }
 
 .quick-links {
     width: 40%;
     display: inline-block;
+    margin-left: 15px;
 }
 
 li {
     list-style-type: none;
+    margin-bottom: 5px;
+}
+
+li a {
+    color: white;
+    text-decoration: none;
 }
